# server-monitor

./: .dockerignore  CLAUDE.md  CROSS_COMPONENT_BRIEFING.md  Dockerfile  METRICS_SPEC.md  README.md  fly.toml  monitor.py  pyproject.toml  web.py
collectors/: __init__.py  base.py  http_collector.py  postgres_collector.py  redis_collector.py
config/: servers-fly.yaml  servers.yaml
static/: help.html  index.html  mini-manifest.json  mini.html
ui/: app.py
ui/widgets/: metric_row.py  server_card.py
