[project]
name = "server-monitor"
version = "0.1.0"
description = "Flicker-free terminal dashboard for monitoring heterogeneous servers"
requires-python = ">=3.12"
dependencies = [
    "textual>=3.0,<4",
    "httpx>=0.28,<1",
    "redis>=5.2,<6",
    "asyncpg>=0.30,<1",
    "pyyaml>=6.0,<7",
    "psutil>=6.0,<7",
]

[project.scripts]
server-monitor = "monitor:main"
